Adds UDIs to anywhere we display an ID & its key
NOTE: Users does not have an UDI entity type as deploy never moves about users

--- a/src/Umbraco.Web.UI.Client/src/views/components/media/umb-media-node-info.html
+++ b/src/Umbraco.Web.UI.Client/src/views/components/media/umb-media-node-info.html
@@ -179,6 +179,10 @@
                     <small>{{ node.key }}</small>
                 </umb-control-group>
 
+                <umb-control-group label="Udi" data-element="node-info-udi">
+                    <small style="word-break: break-all;">{{ node.udi }}</small>
+                </umb-control-group>
+
             </umb-box-content>
         </umb-box>
     </div>
