--- a/src/Umbraco.Web.UI.Client/src/views/relationtypes/views/relationType.html
+++ b/src/Umbraco.Web.UI.Client/src/views/relationtypes/views/relationType.html
@@ -7,6 +7,10 @@
                 <small>{{model.relationType.key}}</small>
             </umb-control-group>
 
+            <umb-control-group label="Udi" data-element="node-info-udi">
+                <small style="word-break: break-all;">{{ model.relationType.udi }}</small>
+            </umb-control-group>
+
             <!-- Direction -->
             <umb-control-group label="@relationType_direction">
                 <ul class="unstyled">
