--- a/src/Umbraco.Web.UI.Client/src/views/components/content/umb-content-node-info.html
+++ b/src/Umbraco.Web.UI.Client/src/views/components/content/umb-content-node-info.html
@@ -178,6 +178,10 @@
                     <small>{{ node.key }}</small>
                 </umb-control-group>
 
+                <umb-control-group label="Udi" data-element="node-info-udi">
+                    <small style="word-break: break-all;">{{ node.udi }}</small>
+                </umb-control-group>
+
             </umb-box-content>
         </umb-box>
     </div>
